## [0.1.0] - new plugin from intellij 2024.2