@@ -1,155 +1,62 @@
-@file:Suppress("VulnerableLibrariesLocal")
 
-import org.apache.commons.io.FileUtils
 import org.jetbrains.changelog.Changelog
 import org.jetbrains.changelog.markdownToHTML
-import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
-import org.w3c.dom.Document
-import java.lang.StringBuilder
-import java.io.File
-import java.io.BufferedReader
-import java.io.ByteArrayInputStream
-import java.io.InputStreamReader
-import java.net.HttpURLConnection
-import java.net.URL
-import java.nio.file.Files
-import javax.xml.parsers.DocumentBuilderFactory
-import javax.xml.xpath.XPathConstants
-import javax.xml.xpath.XPathFactory
+import org.jetbrains.intellij.platform.gradle.IntelliJPlatformType
+import org.jetbrains.intellij.platform.gradle.TestFrameworkType
+import org.jetbrains.intellij.platform.gradle.models.ProductRelease
 
-interface Injected {
-    @get:Inject val fs: FileSystemOperations
-}
-val injected = project.objects.newInstance<Injected>()
-fun properties(key: String) = providers.gradleProperty(key)
-fun environment(key: String) = providers.environmentVariable(key)
-fun project(key: String) = injected.fs[key].toString()
-
-// Import variables from gradle.properties file
-val pluginDownloadIdeaSources: String by project
-val pluginVersion: String by project
-val pluginJavaVersion: String by project
-val pluginEnableDebugLogs: String by project
-val pluginClearSandboxedIDESystemLogsBeforeRun: String by project
-
-val pluginGroup: String by project
-val jvmTarget: String by project
-val pluginSinceBuild: String by project
-val pluginUntilBuild: String by project
-val pluginGradleVersion: String by project
-
-val sourceCompatibility: String by project
-val pluginRepositoryUrl: String by project
-val platformType: String by project
-val platformVersion: String by project
-
-
-
-
-val pluginIdeaVersion = detectBestIdeVersion()
 
 plugins {
     id("java") // Java support
     id("groovy")
+    id("application")
     id("org.jetbrains.kotlin.jvm") version "2.0.0-Beta3"     // Kotlin support
-    id("org.jetbrains.intellij") version "1.17.1"    // Gradle IntelliJ Plugin
+    id("org.jetbrains.intellij.platform") version "2.0.1"
     id("org.jetbrains.changelog") version "2.2.0"    // Gradle Changelog Plugin "com.intellij.clion"
     id("org.jetbrains.qodana") version "0.1.13"    // Gradle Qodana Plugin
-    id("org.jetbrains.kotlinx.kover") version "0.7.4"    // Gradle Kover Plugin
+    id("org.jetbrains.kotlinx.kover") version "0.9.0-RC"// Gradle Kover Plugin
     kotlin("plugin.serialization") version "1.9.22"
 }
 
-
-group = properties("pluginGroup").get()
-version = properties("pluginVersion").get()
-
-
 repositories {
     mavenCentral()
-}
 
-val junitVersion = "5.11.0-M2"
-val junitPlatformLauncher = "1.11.0-M2"
-
-
-val service = project.extensions.getByType<JavaToolchainService>()
-val customLauncher = service.launcherFor {
-        languageVersion.set(JavaLanguageVersion.of(17))
-}
-
-repositories {
+    google()
     maven("https://packages.jetbrains.team/maven/p/ij/intellij-dependencies")
     maven("https://www.jetbrains.com/intellij-repository/releases")
     gradlePluginPortal()
-    mavenCentral()
+
+    // IntelliJ Platform Gradle Plugin Repositories Extension - read more: https://plugins.jetbrains.com/docs/intellij/tools-intellij-platform-gradle-plugin-repositories-extension.html
+    intellijPlatform {
+        defaultRepositories()
+    }
 }
 
 dependencies {
-// https://mvnrepository.com/artifact/commons-httpclient/commons-httpclient
     implementation("org.jetbrains:marketplace-zip-signer:0.1.24")
     implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.7.0-RC")
-}
-
-abstract class UpdatePluginXml : DefaultTask() {
-
-    @TaskAction
-    fun action() {
-        val generatedActionsXml = generateConsoleLoggerActionsXml()
-        val pluginXmlFile = File("src/main/resources/META-INF/plugin.xml")
-
-        doFirst {
-            var pluginXmlContent = pluginXmlFile.readText()
-
-            pluginXmlContent = pluginXmlContent.replace("\${generatedActionsXml}", generatedActionsXml)
-
-            pluginXmlFile.writeText(pluginXmlContent)
-        }
+    intellijPlatform {
+        intellijIdeaUltimate("2024.2")
+        bundledPlugin("JavaScript")
+        instrumentationTools()
+        pluginVerifier()
+        testFramework(TestFrameworkType.Platform)
     }
+    testImplementation("junit:junit:4.13.2")
+    testImplementation("org.opentest4j:opentest4j:1.3.0")
 }
 
-// Configure Gradle IntelliJ Plugin
-// Read more: https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html
-intellij {
 
-    pluginName = properties("pluginName")
-    version = properties("platformVersion")
-    type = properties("platformType")
-
-    // Plugin Dependencies. Uses `platformPlugins` property from the gradle.properties file.
-    plugins = properties("platformPlugins").map { it.split(',').map(String::trim).filter(String::isNotEmpty) }
-
-    updateSinceUntilBuild.set(true)
-
-    sandboxDir.set("${rootProject.projectDir}/.idea-sandbox/${shortenIdeVersion(pluginIdeaVersion)}")
-
-    downloadSources.set(!System.getenv().containsKey("CI"))
-    downloadSources.set(pluginDownloadIdeaSources.toBoolean() && !System.getenv().containsKey("IU"))
-    instrumentCode.set(true)
-
+tasks.named<Test>("test") {
+    useJUnitPlatform()
 }
-// Configure Gradle Changelog Plugin - read more: https://github.com/JetBrains/gradle-changelog-plugin
-changelog {
-    groups.empty()
-    repositoryUrl = properties("pluginRepositoryUrl")
-    headerParserRegex.set("(.*)".toRegex())
-    itemPrefix.set("*")
-}
+group = providers.gradleProperty("pluginGroup").get()
+version = providers.gradleProperty("pluginVersion").get()
 
-// Configure Gradle Kover Plugin - read more: https://github.com/Kotlin/kotlinx-kover#configuration
-koverReport {
-    defaults {
-        xml {
-            onCheck = true
-        }
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(11)
     }
-}
-
-// Configure Gradle Qodana Plugin - read more: https://github.com/JetBrains/gradle-qodana-plugin
-qodana {
-    cachePath.set(file(".qodana").canonicalPath)
-    reportPath.set(file("build/reports/inspections").canonicalPath)
-    saveReport.set(true)
-    showReport.set(System.getenv("QODANA_SHOW_REPORT")?.toBoolean() ?: false)
 }
 
 // Set the JVM language level used to build the project.
@@ -157,26 +64,89 @@ kotlin {
     jvmToolchain(17)
 }
 
-java {
-    sourceCompatibility = JavaVersion.VERSION_17
-    toolchain {
-        languageVersion.set(JavaLanguageVersion.of(17))
+// Configure IntelliJ Platform Gradle Plugin - read more: https://plugins.jetbrains.com/docs/intellij/tools-intellij-platform-gradle-plugin-extension.html
+intellijPlatform {
+    pluginConfiguration {
+        version = providers.gradleProperty("pluginVersion")
+
+        // Extract the <!-- Plugin description --> section from README.md and provide for the plugin's manifest
+        description = providers.fileContents(layout.projectDirectory.file("README.md")).asText.map {
+            val start = "<!-- Plugin description -->"
+            val end = "<!-- Plugin description end -->"
+
+            with(it.lines()) {
+                if (!containsAll(listOf(start, end))) {
+                    throw GradleException("Plugin description section not found in README.md:\n$start ... $end")
+                }
+                subList(indexOf(start) + 1, indexOf(end)).joinToString("\n").let(::markdownToHTML)
+            }
+        }
+
+        val changelog = project.changelog // local variable for configuration cache compatibility
+        // Get the latest available change notes from the changelog file
+        changeNotes = providers.gradleProperty("pluginVersion").map { pluginVersion ->
+            with(changelog) {
+                renderItem(
+                    (getOrNull(pluginVersion) ?: getUnreleased())
+                        .withHeader(false)
+                        .withEmptySections(false),
+                    Changelog.OutputType.HTML,
+                )
+            }
+        }
+
+        ideaVersion {
+            sinceBuild = providers.gradleProperty("pluginSinceBuild")
+            untilBuild = providers.gradleProperty("pluginUntilBuild")
+        }
+    }
+
+    signing {
+        certificateChain = providers.environmentVariable("CERTIFICATE_CHAIN")
+        privateKey = providers.environmentVariable("PRIVATE_KEY")
+        password = providers.environmentVariable("PRIVATE_KEY_PASSWORD")
+    }
+
+    publishing {
+        token = providers.environmentVariable("PUBLISH_TOKEN")
+        // The pluginVersion is based on the SemVer (https://semver.org) and supports pre-release labels, like 2.1.7-alpha.3
+        // Specify pre-release label to publish the plugin in a custom Release Channel automatically. Read more:
+        // https://plugins.jetbrains.com/docs/intellij/deployment.html#specifying-a-release-channel
+        channels = providers.gradleProperty("pluginVersion").map { listOf(it.substringAfter('-', "").substringBefore('.').ifEmpty { "default" }) }
+    }
+
+    pluginVerification {
+        ides {
+            ide(IntelliJPlatformType.WebStorm, "2024.2")
+            recommended()
+            select {
+                types = listOf(IntelliJPlatformType.WebStorm)
+                channels = listOf(ProductRelease.Channel.RELEASE)
+                sinceBuild = "232"
+                untilBuild = "242.*"
+            }
+        }
+    }
+}
+
+// Configure Gradle Changelog Plugin - read more: https://github.com/JetBrains/gradle-changelog-plugin
+changelog {
+    groups.empty()
+    repositoryUrl = providers.gradleProperty("pluginRepositoryUrl")
+}
+
+// Configure Gradle Kover Plugin - read more: https://github.com/Kotlin/kotlinx-kover#configuration
+kover {
+    reports {
+        total {
+            xml {
+                onCheck = true
+            }
+        }
     }
 }
 
 tasks {
-    register("clearSandboxedIDESystemLogs") {
-        val sandboxLogDir = File("${rootProject.projectDir}/.idea-sandbox/${shortenIdeVersion(pluginIdeaVersion)}/system/log/")
-        doFirst {
-            if (pluginClearSandboxedIDESystemLogsBeforeRun.toBoolean()) {
-                if (sandboxLogDir.exists() && sandboxLogDir.isDirectory) {
-                    FileUtils.deleteDirectory(sandboxLogDir)
-                    logger.quiet("Deleted sandboxed IDE's log folder $sandboxLogDir")
-                }
-            }
-        }
-    }
-
     register("updatePluginXml") {
         val generatedActionsXml = generateConsoleLoggerActionsXml()
         val pluginXmlFile = File("src/main/resources/META-INF/plugin.xml")
@@ -186,238 +156,46 @@ tasks {
             pluginXmlFile.writeText(pluginXmlContent)
         }
     }
-
-
-
-    // Set the JVM compatibility versions
-    withType<JavaCompile> {
-        sourceCompatibility = pluginJavaVersion
-        targetCompatibility = pluginJavaVersion
-        options.compilerArgs = listOf("-Xlint:deprecation")
-        options.encoding = "UTF-8"
-    }
-    withType<org.jetbrains.kotlin.gradle.tasks.UsesKotlinJavaToolchain>().configureEach {
-        kotlinJavaToolchain.toolchain.use(customLauncher)
-    }
-    withType<KotlinCompile> {
-        kotlinOptions.jvmTarget = sourceCompatibility
-    }
-    withType<Test> {
-        useJUnitPlatform()
-
-        // avoid JBUIScale "Must be precomputed" error, because IDE is not started (LoadingState.APP_STARTED.isOccurred is false)
-        jvmArgs("-Djava.awt.headless=true")
-    }
-    withType<Test> {
-        useJUnitPlatform()
-
-        // avoid JBUIScale "Must be precomputed" error, because IDE is not started (LoadingState.APP_STARTED.isOccurred is false)
-        jvmArgs("-Djava.awt.headless=true")
-    }
-
-    runIde {
-        dependsOn("clearSandboxedIDESystemLogs")
-
-        maxHeapSize = "1g" // https://docs.gradle.org/current/dsl/org.gradle.api.tasks.JavaExec.html
-
-        // force detection of slow operations in EDT when playing with sandboxed IDE (SlowOperations.assertSlowOperationsAreAllowed)
-        jvmArgs("-Dide.slow.operations.assertion=true")
-
-        if (pluginEnableDebugLogs.toBoolean()) {
-            systemProperties(
-                "idea.log.debug.categories" to "#com.github.bgomar.consolelogger"
-            )
-        }
-
-        autoReloadPlugins.set(false)
-
-        // If any warning or error with missing --add-opens, wait for the next gradle-intellij-plugin's update that should sync
-        // with https://raw.githubusercontent.com/JetBrains/intellij-community/master/plugins/devkit/devkit-core/src/run/OpenedPackages.txt
-        // or do it manually
-    }
-    buildSearchableOptions {
-        enabled = false
-    }
     wrapper {
-        gradleVersion = properties("gradleVersion").get()
+        gradleVersion = providers.gradleProperty("gradleVersion").get()
     }
-
-    patchPluginXml {
-        version = properties("pluginVersion")
-        sinceBuild = properties("pluginSinceBuild")
-        untilBuild = properties("pluginUntilBuild")
-        updatePluginXml()
-        // Extract the <!-- Plugin description --> section from README.md and provide for the plugin's manifest
-        pluginDescription.set(
-            file("README.md").readText().lines().run {
-                val start = "<!-- Plugin description -->"
-                val end = "<!-- Plugin description end -->"
-
-                if (!containsAll(listOf(start, end))) {
-                    throw GradleException("Plugin description section not found in README.md:\n$start ... $end")
-                }
-                subList(indexOf(start) + 1, indexOf(end))
-            }.joinToString("\n").let { markdownToHTML(it) }
-        )
-
-        // Get the latest available change notes from the changelog file
-        changeNotes.set(provider {
-            with(changelog) {
-                renderItem(
-                    getOrNull(pluginVersion)
-                        ?: runCatching { getLatest() }.getOrElse { getUnreleased() },
-                    Changelog.OutputType.HTML,
-                )
-            }
-        })
+    withType<JavaCompile> {
+        sourceCompatibility = "17"
+        targetCompatibility = "17"
     }
-
-    buildSearchableOptions {
-        enabled = true
-    }
-    compileKotlin {
-        kotlinOptions.jvmTarget = jvmTarget
-    }
-
-    compileTestKotlin {
-        kotlinOptions.jvmTarget  = jvmTarget
-    }
-
-    signPlugin {
-        certificateChainFile.set(file("./secrets/chain.crt"))
-        privateKeyFile.set(file("./secrets/private_encrypted.pem"))
-        password = environment("PRIVATE_KEY_PASSWORD")
-    }
-
     publishPlugin {
-        dependsOn("patchChangelog")
-        token = environment("PUBLISH_TOKEN")
-        channels = properties("pluginVersion").map { listOf(it.substringAfter('-', "").substringBefore('.').ifEmpty { "default" }) }
-    }
-
-    patchPluginXml {
-        changeNotes.set(
-            """<br>
-
-            """
-        )
+        dependsOn(patchChangelog)
     }
 }
 
-
-fun isNonStable(version: String): Boolean {
-    if (listOf("RELEASE", "FINAL", "GA").any { version.uppercase().endsWith(it) }) {
-        return false
-    }
-    return listOf("alpha", "Alpha", "ALPHA", "b", "beta", "Beta", "BETA", "rc", "RC", "M", "EA", "pr", "atlassian").any {
-        "(?i).*[.-]${it}[.\\d-]*$".toRegex().matches(version)
-    }
-}
-
-/** Return an IDE version string without the optional PATCH number.
- * In other words, replace IDE-MAJOR-MINOR(-PATCH) by IDE-MAJOR-MINOR. */
-fun shortenIdeVersion(version: String): String {
-    if (version.contains("SNAPSHOT", ignoreCase = true)) {
-        return version
-    }
-    val matcher = Regex("[A-Za-z]+[\\-]?[0-9]+[\\.]{1}[0-9]+")
-    return try {
-        matcher.findAll(version).map { it.value }.toList()[0]
-    } catch (e: Exception) {
-        logger.warn("Failed to shorten IDE version $version: ${e.message}")
-        version
-    }
-}
-
-/** Find latest IntelliJ stable version from JetBrains website. Result is cached locally for 24h. */
-fun findLatestStableIdeVersion(): String {
-    val t1 = System.currentTimeMillis()
-    val definitionsUrl = URL("https://www.jetbrains.com/updates/updates.xml").toURI().toURL()
-    val cachedLatestVersionFile = File(System.getProperty("java.io.tmpdir") + "/jle-ij-latest-version.txt")
-    var latestVersion: String
-    try {
-        if (cachedLatestVersionFile.exists()) {
-
-            val cacheDurationMs = Integer.parseInt(project.findProperty("pluginIdeaVersionCacheDurationInHours") as String) * 60 * 60_000
-            if (cachedLatestVersionFile.exists() && cachedLatestVersionFile.lastModified() < (System.currentTimeMillis() - cacheDurationMs)) {
-                logger.quiet("Cache expired, find latest stable IDE version from $definitionsUrl then update cached file $cachedLatestVersionFile")
-                latestVersion = getOnlineLatestStableIdeVersion(definitionsUrl)
-                cachedLatestVersionFile.delete()
-                Files.writeString(cachedLatestVersionFile.toPath(), latestVersion, Charsets.UTF_8)
-
-            } else {
-                logger.quiet("Find latest stable IDE version from cached file $cachedLatestVersionFile")
-                latestVersion = Files.readString(cachedLatestVersionFile.toPath())!!
+intellijPlatformTesting {
+    runIde {
+        register("runIdeForUiTests") {
+            task {
+                jvmArgumentProviders += CommandLineArgumentProvider {
+                    listOf(
+                        "-Drobot-server.port=8082",
+                        "-Dide.mac.message.dialogs.as.sheets=false",
+                        "-Djb.privacy.policy.text=<!--999.999-->",
+                        "-Djb.consents.confirmation.enabled=false",
+                    )
+                }
             }
 
-        } else {
-            logger.quiet("Find latest stable IDE version from $definitionsUrl")
-            latestVersion = getOnlineLatestStableIdeVersion(definitionsUrl)
-            Files.writeString(cachedLatestVersionFile.toPath(), latestVersion, Charsets.UTF_8)
-        }
-
-    } catch (e: Exception) {
-        if (cachedLatestVersionFile.exists()) {
-            logger.warn("Error: ${e.message}. Will find latest stable IDE version from cached file $cachedLatestVersionFile")
-            latestVersion = Files.readString(cachedLatestVersionFile.toPath())!!
-        } else {
-            throw RuntimeException(e)
+            plugins {
+                robotServerPlugin()
+            }
         }
     }
-    if (logger.isDebugEnabled) {
-        val t2 = System.currentTimeMillis()
-        logger.debug("Operation took ${t2 - t1} ms")
-    }
-    return latestVersion
 }
 
-/** Find latest IntelliJ stable version from given url. */
-fun getOnlineLatestStableIdeVersion(definitionsUrl: URL): String {
-    val definitionsStr = readRemoteContent(definitionsUrl)
-    val builderFactory = DocumentBuilderFactory.newInstance()
-    val builder = builderFactory.newDocumentBuilder()
-    val xmlDocument: Document = builder.parse(ByteArrayInputStream(definitionsStr.toByteArray()))
-    val xPath = XPathFactory.newInstance().newXPath()
-    val expression = "/products/product[@name='IntelliJ IDEA']/channel[@id='IC-IU-RELEASE-licensing-RELEASE']/build[1]/@version"
-    return xPath.compile(expression).evaluate(xmlDocument, XPathConstants.STRING) as String
-}
-
-/** Read a remote file as String. */
-fun readRemoteContent(url: URL): String {
-    val t1 = System.currentTimeMillis()
-    val content = StringBuilder()
-    val conn = url.openConnection() as HttpURLConnection
-    conn.requestMethod = "GET"
-    BufferedReader(InputStreamReader(conn.inputStream)).use { rd ->
-        var line: String? = rd.readLine()
-        while (line != null) {
-            content.append(line)
-            line = rd.readLine()
-        }
-    }
-    val t2 = System.currentTimeMillis()
-    logger.quiet("Download $url, took ${t2 - t1} ms (${content.length} B)")
-    return content.toString()
-}
-
-/** Get IDE version from gradle.properties or, of wanted, find latest stable IDE version from JetBrains website. */
-fun detectBestIdeVersion(): String {
-    val pluginIdeaVersionFromProps = project.findProperty("pluginIdeaVersion")
-    if (pluginIdeaVersionFromProps.toString() == "IC-LATEST-STABLE") {
-        return "IC-${findLatestStableIdeVersion()}"
-    }
-    if (pluginIdeaVersionFromProps.toString() == "IU-LATEST-STABLE") {
-        return "IU-${findLatestStableIdeVersion()}"
-    }
-    return pluginIdeaVersionFromProps.toString()
-}
 
 operator fun Any.get(key: String): Any {
     return key
 }
 
 fun generateConsoleLoggerActionsXml(): String {
-    val actionsXml: StringBuilder = StringBuilder()
+    val actionsXml: java.lang.StringBuilder = StringBuilder()
     actionsXml.append("<!-- Include actions XML -->\n")
     for (i in 1..9) {
         actionsXml.append(createActionXml(i))
@@ -433,7 +211,7 @@ fun generateConsoleLoggerActionsXml(): String {
 }
 
 fun createActionXml(i: Int): String {
-    val actionXml: StringBuilder = StringBuilder()
+    val actionXml: java.lang.StringBuilder = StringBuilder()
     actionXml.append("\n             <action id=\"com.github.bgomar.consolelogger.add").append(i).append("\" class=\"com.github.bgomar.consolelogger" +
             ".ConsoleLoggerAction").append("\"\n")
     actionXml.append("                    text=\"").append(i-1).append("\"\n")
